# neighbor-connect

./: .gitignore  README.md  deploy.sh  docker-compose.yml  endpoints_api.md  install.sh  package-lock.json  pyproject.toml  stop_containers.sh
.github/workflows/: backend_tests.yml
ERD/: App Data Requirement.docx  NeighborConnect ERD.drawio
backend/: .env  API.md  Dockerfile  README.md  neighborConnectSQL.sql  package.json  pyproject.toml  server.js
backend/app/: init_db.py  main.py
backend/app/api/: constants.py  db_util.py  main.py  util.py
backend/app/api/routes/: auth.py  auth_2fa.py  chatbot.py  chats.py  emergency_check_in.py  gamification.py  image_storage.py  incidents.py  offer.py  users.py
backend/app/api_models/: auth.py  auth_2fa.py  chats.py  emergency_check_in.py  image_storage.py  incidents.py  offer.py  profile.py  users.py
backend/app/clients/: open_ai.py
backend/app/core/: config.py  db.py
backend/app/db_models/: auth_2fa.py  chats.py  image_storage.py  incidents.py  offer.py
backend/app/services/: email_service.py
backend/app/workers/: cleaner.py
backend/docs/: API.md  image_storage_test.html
backend/schema/: openapi.json
backend/tests/: conftest.py  dummy_test.py  incident_test.py  users_test.py
chats-microservice/: .gitignore  API_Chats.md  README.md  pyproject.toml
chats-microservice/app/: init_db.py  main.py  models.py
client/: package-lock.json  package.json  readme.md  template.html
client/src/: App.jsx
common/proto/: Auxiliary.proto  Chat.proto  Incident.proto  Login.proto  Profile.proto
db/: create_tables.sql
frontend/: .env  .env-example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/tests/: ChangePasswordModal.test.js  Chatbot.test.js  emegencycheckin.test.js  passwordrecovery.test.js  passwordreset.test.js
schema/: openapi.json  schema.json
server/: Dockerfile  app.py  pyproject.toml
server/db/: requests.py  tables.py
server/incidents/: Incident_pb2_grpc.py  auxiliary.py  incident_pb2.py  incident_pb2_grpc.py  incident_service.py  (+5 more)
(+82 files in other folders)
