[tool.poetry]
name = "app"
version = "0.1.0"
description = "Chats mircoservice for neighbor-connect"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.1"
SQLAlchemy = "^2.0.29"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
