[tool.poetry]
name = "app"
version = "0.1.0"
description = "Backend for neighbor"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.1"
SQLAlchemy = "^2.0.29"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"
pyjwt = "^2.8.0"
bcrypt = "^4.1.2"
python-multipart = "^0.0.9"
pytest = "^8.3.3"
httpx = "^0.27.2"

[tool.poetry.scripts]
test = "pytest:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
